--- a/client/.gitignore
+++ b/client/.gitignore
@@ -2,9 +2,21 @@
 
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
 
 # misc
-.env
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
