--- a/client/package.json
+++ b/client/package.json
@@ -33,5 +33,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "author": "Masi Malmi",
+  "license": "ISC"
 }
