--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -29,8 +29,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install
+    - run: npm ci
     - run: npm run build --if-present
+    - run: npm run size
     - run: npm test
       env:
         CI: true
