--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "size": "size-limit"
   },
   "proxy": "http://localhost:9000/",
   "eslintConfig": {
@@ -34,6 +35,15 @@
       "last 1 safari version"
     ]
   },
+  "size-limit": [
+    {
+      "path": "./index.js"
+    }
+  ],
   "author": "Masi Malmi",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@size-limit/preset-app": "^4.4.5",
+    "size-limit": "^4.4.5"
+  }
 }
