--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -17,6 +17,10 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
+      - name: 'Login via Azure CLI'
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
       - name: 'Terraform Format'
         uses: hashicorp/terraform-github-actions@master
         with:
