--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -10,6 +10,7 @@ on:
 env:
     tf_version: '0.12.23'
     tf_working_dir: 'infra/terraform'
+    az_cli_args: '-var="client_secret=${{ secrets.AZ_CLIENT_SECRET }}" -var="client_id=${{ secrets.AZ_CLIENT_ID }}" -var="tenant_id=${{ secrets.AZ_TENANT_ID }}"'
 jobs:
   terraform:
     name: 'Terraform'
@@ -17,10 +18,6 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
-      - name: 'Login via Azure CLI'
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
       - name: 'Terraform Format'
         uses: hashicorp/terraform-github-actions@master
         with:
@@ -37,6 +34,7 @@ jobs:
           tf_actions_subcommand: 'init'
           tf_actions_working_dir: ${{ env.tf_working_dir }}
           tf_actions_comment: false
+          args: '${{ env.az_cli_args }}'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Validate'
@@ -55,6 +53,6 @@ jobs:
           tf_actions_subcommand: 'plan'
           tf_actions_working_dir: ${{ env.tf_working_dir }}
           tf_actions_comment: false
-          args: '-var="linkedin_client_secret=dummyvalue"'
+          args: '-var="linkedin_client_secret=dummyvalue" ${{ env.az_cli_args }}'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
