--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -34,7 +34,7 @@ jobs:
           tf_actions_subcommand: 'init'
           tf_actions_working_dir: ${{ env.tf_working_dir }}
           tf_actions_comment: false
-          args: '-var="tfstate_key=azurespa.ci.tfstate"'
+          #args: '-var="tfstate_key=azurespa.ci.tfstate"'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ARM_CLIENT_ID: ${{ secrets.AZ_CLIENT_ID }}
@@ -57,7 +57,7 @@ jobs:
           tf_actions_subcommand: 'plan'
           tf_actions_working_dir: ${{ env.tf_working_dir }}
           tf_actions_comment: false
-          args: '-var="linkedin_client_secret=dummyvalue" -var="tfstate_key=azurespa.ci.tfstate"'
+          args: '-var="linkedin_client_secret=dummyvalue"'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ARM_CLIENT_ID: ${{ secrets.AZ_CLIENT_ID }}
