--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -36,6 +36,7 @@ jobs:
           tf_actions_comment: false
           #args: '-var="tfstate_key=azurespa.ci.tfstate"'
         env:
+          TF_LOG: TRACE
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ARM_CLIENT_ID: ${{ secrets.AZ_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.AZ_CLIENT_ID }}
