--- a/.github/workflows/spa.yml
+++ b/.github/workflows/spa.yml
@@ -48,8 +48,8 @@ jobs:
           ARM_CLIENT_SECRET: ${{ secrets. AZ_CLIENT_SECRET }}
           ARM_SUBSCRIPTION_ID: 'cff7ced3-00d8-477f-8589-11da069c1da1'
           ARM_TENANT_ID: ${{ secrets.AZ_TENANT_ID }}
-      - name: 'Terraform Apply'
-        uses: dev-playground/terraform-azcli@master
+      - name: 'Terraform Apply using custom action'
+        uses: '.github/actions/action@master'
         with:
           variables: linkedin_client_secret=${{ secrets.LINKEDIN_CLIENT_SECRET }}
           path: ${{ env.tf_version }}
