--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -11,18 +11,15 @@ on:
 
 jobs:
   build:
-
+    name: 'Build and test client'
     runs-on: ubuntu-latest
-    
     defaults:
       run:
         shell: bash
         working-directory: client
-
     strategy:
       matrix:
         node-version: [10.x, 12.x]
-
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
