--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "start": "node server.js",
-    "tag:updated": "USER=$(git log -1 --pretty=format:'%an') && TAG=UPDATED-`date +%Y-%m-%d-%H%M` && git tag -a $TAG -m '$TAG by $USER' && git push origin $TAG"
+    "tag:updated": "USER=$(git log -1 --pretty=format:'%an') && TAG=UPDATED-`date +%Y-%m-%d-%H%M` && git tag -a $TAG -m \"$TAG by $USER\" && git push origin $TAG"
   },
   "dependencies": {
     "compression": "^1.7.4",
